# DiscordBot

./: .gitignore  CMakeLists.txt  DiscordBot.cpp  DiscordBot.h
src/: DiscordBot.cpp  DiscordBot.h
